--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}我的ai画廊{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static',filename = 'bootstrap/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static',filename = 'jquery-3.7.1.min.js') }}"></script>
@@ -28,9 +29,20 @@
             width: 15px;
             height: 15px;
         }
+        .tran-image{
+            transition: all 0.5s ease;
+        }
+        .tran-image:hover{
+            /* 向上移动 5 像素，负数代表向上 */
+            transform: translateY(-5px);
+
+            /* 添加一个更柔和、更弥散的阴影来模拟“抬起”的感觉 */
+            /* 0px: 水平偏移; 10px: 垂直偏移; 20px: 模糊半径; rgba(0,0,0,0.2): 20%透明度的黑色 */
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
-<body style="height: 100%;">
+<body style="height: 100%;{% block body_class %}{% endblock %}">
 
     <!--导入宏-->
     {% from '_macros.html' import nav_link %}
