--- a/app/templates/mange.html
+++ b/app/templates/mange.html
@@ -4,8 +4,14 @@
 <!--替换标题-->
 {% block title %}管理页面{% endblock %}
 
+{% block body_class %} background-color:#f6f6f6 {% endblock %}
+
+
 <!--替换正文-->
 {% block body %}
+    <div id="alter-div" style="display: none;position: absolute;width: 100%"   class="alert text-center">
+        <strong></strong>
+    </div>
 
     <div class="container" style="margin-top: 100px">
         <div class="panel panel-default">
@@ -31,46 +37,100 @@
                 <h3 class="panel-title">图片管理中心</h3>
             </div>
             <div class="panel-body">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th style="width: 15%">略缩图</th>
-                            <th>文件名</th>
-                            <th style="width: 15%">操作</th>
-                        </tr>
-                    </thead>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th style="width: 15%">略缩图</th>
+                                <th>文件名</th>
+                                <th style="width: 15%">操作</th>
+                            </tr>
+                        </thead>
 
-                    <tbody>
-                    {% for image in images %}
-                        <tr id="image-row-{{ image.filename.replace('.','-') }}">
-                        <td><img src="{{ url_for('static',filename='images/' + image.filename) }}" alt="略缩图" class="img-thumbnail" width="100"></td>
-                        <td>{{ image.filename }}</td>
-                        <td>
-                           <button class="btn btn-danger" data-filename="{{ image.filename }}">删除</button>
-                        </td>
-                    {% endfor %}
-                </table>
+                        <tbody>
+                        {% for image in images %}
+                            <tr id="image-row-{{ image.filename.replace(' ','-').replace('.','-') }}">
+                            <td><img src="{{ url_for('static',filename='images/' + image.filename) }}" alt="略缩图" class="img-thumbnail" width="100"></td>
+                            <td>{{ image.filename }}</td>
+                            <td>
+                               <button class="btn btn-danger" data-filename="{{ image.filename }}">删除</button>
+                            </td>
+                        {% endfor %}
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-    $(document).ready(function(){
-        $('.btn.btn-danger').click(function(){
-            let filenameToDelete = $(this).data("filename");
-            if (confirm("你确定要删除"+filenameToDelete+"吗？")) {
-                $.post("{{ url_for('delete_image') }}",{filename:filenameToDelete},function(response){
-                    if (response.status == 'success'){
-                        let rowId = '#image-row-' + filenameToDelete.replace('.','-');
-                        $(rowId).fadeOut('slow', function(){
-                            $(this).remove();})
-                        } else {
-                            alert('删除失败'+response.message)
-                    }
+      function alter_fade_io(message,type){
+          let AlterDiv = $('#alter-div');
+          AlterDiv.removeClass("alert-success alert-danger").addClass('alert-' + type);
+          AlterDiv.find('strong').text(message);
+          AlterDiv.fadeIn('slow').delay(2000).fadeOut('slow');
+      }
+
+        $(document).ready(function () {
+    // 窃听器 A
+    console.log("页面加载完成，准备监听删除按钮。");
+
+    $('.btn.btn-danger').click(function () {
+        // 窃听器 B
+        console.log("删除按钮被点击了！");
+
+        let filenameToDelete = $(this).data("filename");
+        if (confirm("你确定要删除" + filenameToDelete + "吗？")) {
+
+            // 窃听器 C
+            console.log("准备向服务器发送删除请求，要删除的文件是: " + filenameToDelete);
+
+            $.post("{{ url_for('delete_image') }}", {filename: filenameToDelete}, function (response) {
+
+                // 窃听器 D - 这是最重要的一个！
+                console.log("服务器返回了信息！内容是: ", response);
+
+                if (response.status == 'success') {
+                // 使用正则表达式 / /g 替换所有空格，/\\./g 替换所有点
+                // 这是最稳妥的办法
+                let safeFilename = filenameToDelete.replace(/ /g, '-').replace(/\./g, '-');
+                let rowId = '#image-row-' + safeFilename;
+
+                // 现在 rowId 是一个绝对合法的选择器了！
+                console.log("准备操作的合法 rowId 是: " + rowId); // 加一个新的窃听器确认一下
+
+                $(rowId).fadeOut('slow', function () {
+                    $(this).remove();
+                    alter_fade_io("删除成功", 'success');
                 });
-            }
-        });
+            } else {
+                    // 窃听器 F
+                    console.log("服务器说失败了，准备显示失败提示。");
+                    alter_fade_io('删除失败: ' + response.message, 'danger');
+                }
+            });
+        }
     });
+});
+
+
+      {#$(document).ready(function () {#}
+      {#    $('.btn.btn-danger').click(function () {#}
+      {#        let filenameToDelete = $(this).data("filename");#}
+      {#        if (confirm("你确定要删除" + filenameToDelete + "吗？")) {#}
+      {#            $.post("{{ url_for('delete_image') }}", {filename: filenameToDelete}, function (response) {#}
+      {#                if (response.status == 'success') {#}
+      {#                    let rowId = '#image-row-' + filenameToDelete.replace('.', '-');#}
+      {#                    $(rowId).fadeOut('slow', function () {#}
+      {#                        $(this).remove();#}
+      {#                        alter_fade_io("删除成功", 'success');#}
+      {#                    })#}
+      {#                } else {#}
+      {#                    alter_fade_io('删除失败: ' + response.message, 'danger');#}
+      {#                }#}
+      {#            });#}
+      {#        }#}
+      {#    });#}
+      {#});#}
     </script>
 
 {% endblock %}
